# puuli

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml
polls/: views.py
polls/migrations/: 0001_initial.py
puuli/: asgi.py  settings.py  urls.py  wsgi.py
