[tool.poetry]
name = "puuli"
version = "0.1.0"
description = "Simple pool app"
authors = ["Herson Oliveira <oliveira.herson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.9"
psycopg2-binary = "^2.9.2"
pip = "^21.3.1"
install = "^1.3.4"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
